<resources>
    <string name="Lignite">Lignite</string>
    <string name="app_name">Lignite</string>
    <string name="sending_feedback">Sending feedback...</string>
    <string name="error_enter_text">Please enter some text.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="feedback_sent">Feedback sent! Thanks a lot :)</string>
    <string name="error_field_required">This is a required field.</string>
    <string name="error_invalid_code">Someone is already using this account, silly goose. If this is your account,
    please reset it using the 1st link below, and then try logging in again.</string>
    <string name="logging_in">Logging in...</string>
    <string name="error_doesnt_exist">Account doesn\'t exist, sorry</string>
    <string name="error_other">Other unknown error. Feel free to try again.</string>
    <string name="server_error">Server error, but feel free to try again.</string>
    <string name="pledged">Pledged</string>
    <string name="animation_mode">Animation Mode</string>
    <string name="watch_not_connected">Sorry! Your watch doesn\'t seem to be connected...
        Please connect your watch through the Pebble/Pebble Time app, and retry sending the setting.</string>
    <string-array name="feedback_types">
        <item>Crash</item>
        <item>Bug</item>
        <item>Design-related</item>
        <item>Feature-related</item>
        <item>Other</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_header_lookandfeel">Look and Feel</string>
    <string name="pref_title_lookandfeel">Look and Feel</string>
    <string name="pref_header_colours">Colours</string>
    <string name="pref_header_othercolours">Other Colours</string>
    <string name="pref_header_animations">Animations</string>
    <string name="pref_btdisalert">Bluetooth disconnect alert</string>
    <string name="pref_btrealert">Bluetooth reconnect alert</string>
    <string name="pref_title_invert">Invert colours</string>
    <string name="show_borders">Show borders</string>
    <string name="pref_boot_animation">Boot animation</string>
    <string name="pref_bluetooth_icon">Bluetooth indicator</string>
    <string name="pref_title_1_colour">Outer colour</string>
    <string name="pref_title_2_colour">Middle colour</string>
    <string name="pref_title_3_colour">Inner colour</string>
    <string name="pref_antialiased">Antialiasing</string>
    <string name="pref_constant_anim">Constant animation</string>
    <string name="battery_bar">Battery bar</string>
    <string name="minute_colour">Minute</string>
    <string name="hour_colour">Hour</string>
    <string name="alt_date_format">Alternate date format</string>
    <string name="date_colour">Date</string>
    <string name="outline_numbers">Black border on numbers</string>
    <string name="organize_colours">Organize colours</string>
    <string name="randomize_width">Randomize width (beta)</string>
    <string name="default_width">Width</string>
    <string name="reduced">Reduced</string>
    <string name="weather_format">Fahrenheit</string>
    <string name="open_on_charging">Open on charging</string>
    <string name="randomize_colours">Randomize colours</string>
    <string name="custom_colour_1">Custom colour 1</string>
    <string name="custom_colour_2">Custom colour 2</string>
    <string name="custom_colour_3">Custom colour 3</string>
    <string name="circle_colour">Circle</string>
    <string name="your_time">Your Time</string>
    <string name="colour">Colour</string>
    <string name="analogue">Analogue</string>
    <string name="subtract_hour">Subtract hour</string>
    <string name="timezone">Timezone</string>
    <string name="timezones">Timezones</string>
    <string name="time">Time</string>
    <string name="none">(not set)</string>
    <string name="name">Name</string>
    <string name="other_time">Other Time</string>
    <string name="secondly_updates">Secondly updates</string>
    <string name="weekday">Weekday</string>
    <string name="advanced_date">Advanced date</string>
    <string name="digital_time">Digital time</string>
    <string name="minute_analogue">Minute analogue circle</string>
    <string name="hour_analogue">Hour analogue circle</string>
    <string name="compressed_date_format">Compressed date format</string>
    <string name="accent">Accent</string>
    <string name="shake_to_animate">Shake to animate</string>
    <string name="beatline_data">Beatline data</string>
    <string name="animation_type">Animation type</string>
    <string name="show_date">Show date</string>
    <string name="show_battery">Show battery level</string>
    <string name="time_colour">Time</string>
    <string name="background_colour">Background</string>
    <string name="front_colour">Front</string>
    <string name="back_colour">Back</string>
    <string name="battery">Battery</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="random">Random</string>
    <string name="apple_watch_mode">Battery vampire (secondly)</string>
    <string name="minutely">Minutely</string>
    <string name="on_change">On change</string>
    <string name="minute_dependant">Amount of bars = minutes</string>
    <string name="equalizer_animation_mode">Equalizer Animation Mode</string>
    <string name="show_day">Show day</string>
    <string name="animation_roll">Wave</string>
    <string name="animation_music">Music</string>
    <string name="animation_expand_and_slam">Expand and Slam</string>
    <string name="battery_bar_colour">Battery bar</string>
    <string name="colour_picker">Colour Picker</string>
    <string name="corrected">Corrected</string>
    <string name="uncorrected">Uncorrected</string>
    <string name="selected_colour">Selected Colour:</string>
    <string name="battery_bar_mode">Battery bar mode</string>
    <string name="date">Date</string>
    <string name="date_format">Date format</string>
    <string name="mode">Mode</string>
    <string name="secondly">Secondly</string>
    <string name="no_battery">No battery indicators</string>
    <string name="bar_only">Bar only</string>
    <string name="text_only">Text only</string>
    <string name="bar_and_text">Bar and text</string>
    <string name="mo_day_year">Mo. day, year</string>
    <string name="mm_dd_yy_week_ww">mm dd yy Week: ww</string>
    <string name="dd_mm_yy_week_ww">dd mm yy Week: ww</string>
    <string name="a">Weekday</string>
    <string name="grow">Grow</string>
    <string name="flower">Flower</string>
    <string name="b_x_y">Month dd, YYYY</string>
    <string name="a_d">Day - mm/dd/yy</string>
    <string name="a_x_m_y">Day - dd/mm/yy</string>
    <string name="d_cw_w">mm/dd/yy</string>
    <string name="speedometer_description">Speedometer is a watchface that\'s sure to pop off your screen!\n\nIt features bars that fill up as time or other data progresses, such as the weekday, minute, and battery percentage.</string>
    <string name="rightnighter_description">Kids of the 80s know exactly what this is. Have a \"voice box\" right on your wrist with a talking animation when the time changes.\n\nOn the lefthand side you see the date and on the opposite the remaining battery.</string>
    <string name="chunky_description">A nice square design where you can choose colors and see the time in nice big numbers.\n\nThere are quite a few options as well, and goes well with any outfit you may wear!</string>
    <string name="lines_description">A very simple yet very stylish face displaying nothing but the time and date.\n\nThere are quite a few settings here as well, and of course: customizable colours. This face is soon to have larger fonts!</string>
    <string name="colours_description">This watchface is really gonna make your Pebble Time\'s display shine by changing the colours every minute, filling the black background with beautiful shades of colour.\n\nFind in settings the ability to change the width of these bars and other aspects of the face. Quite beautiful!</string>
    <string name="timedock_description">Official watchface for TimeDock by Engineerable! Available on the appstore. \n\nSettings include being able to open the face when plugged in, animations, and more. Check it out, it\'s free.</string>
    <string name="tree_of_colours_description">This one will truly live on the colour screen! Every minute a \'branch\' grows randomly emulating a growing branch of a tree (hence the name).\n\nEvery hour it resets itself and since the growing and coloring happens randomly it always looks different.</string>
    <string name="timezones_description">Our take on a watch face with two timezones giving you many personalizing options too!\n\nThe inner circle shows the time for the first timezone (in the above example for Philipp’s timezone) and the outer one stands for the second timezone (Edwin, in the above example).</string>
    <string name="slot_machine_description">A unique designed based around an actual slot machine. Watch the numbers shrink in and out of view as time passes by!\n\nSlot Machine comes with a few other handy features, such as battery bar and shake to animate, just in case.</string>
    <string name="pulse_description">This is another face living through its animations. We could either let the circle grow every minute or have a pulse animation every minute changing the background color.\n\nThis will really make the Pebble Time’s colour display shine!</string>
    <string name="simplified_analogue_description">Simplicity meets class with Simplified Analogue. \n\nWe listened to user requests and created this face: it features the digital time but with a minimal and awesome looking analogue display. Customize about every colour and turn on/off anything you don\'t like.</string>
    <string name="personal_description">Personal is what it says it is: Personal.\n\nCustomize Personal to show your name and see it greet you across the day. Beautifully optimized for Pebble Time\'s display, it truly looks amazing.</string>
    <string name="beat_description">Beat is an attractive watchface with more than enough animations which uses it\'s unique \"beatline\" to show information such as the battery level or bluetooth status (or if you want, have it completely random).\n\nThere are some damn cool animations that catch the eye and make it look as if your wrist is actually monitoring your heartbeat! Not to mention, you can find settings for customizing colours and other features in the Lignite companion app.</string>
    <string name="equalizer_description">Another one making your color display go wild! \n\nThe bars have many different animation modes such as roll, wave, music, and more! You can choose how often you want these to animate and more. The battery bar acts as a divider. Sports the time, weekday, and date as well.</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="enter_details">Please enter your Lignite account details</string>
    <string name="check">Check</string>
    <string name="login">Login</string>
    <string name="cant_login">Can\'t login? Reset your acccount here.</string>
    <string name="no_account">No account? Click to continue without one.\n(Go back)</string>
    <string name="credits">Credits</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="importance">Importance</string>
    <string name="feedback_disclaimer">Feedback goes directly to Edwin\'s server. Your user ID (access code) will be tied to it. See our privacy policy at: http://lignite.io/policy. We use your feedback to improve the Lignite Collection as we strive to optimize and make some of the best watchfaces and watchapps out there.</string>
    <string name="lignite_settings">Lignite Settings</string>
</resources>