<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

   <ListPreference
       android:key="tim_timezone_2"
       android:title="@string/timezone" />

    <CheckBoxPreference
        android:key="tim_subtract_hour"
        android:title="@string/subtract_hour"
        android:summary="@string/subtract_hour_summary" />

    <EditTextPreference
        android:key="tim_name_2"
        android:title="@string/name"/>

    <yuku.ambilwarna.widget.AmbilWarnaPreference
        android:key="tim_colour_2"
        android:title="@string/colour"
        android:defaultValue="0xff0000"/>

    <CheckBoxPreference
        android:key="tim_analogue_2"
        android:title="@string/analogue"
        android:defaultValue="true"/>

</PreferenceScreen>