<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.edwinfinch.lignite.AppsActivity">

    <item android:id="@+id/action_settings" android:title="@string/lignite_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_feedback" android:title="@string/submit_feedback"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_credits" android:title="@string/credits"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/logout"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
